table heading spacing change and transaction button alignment fix

--- a/packages/composer-playground/src/app/test/test.component.scss
+++ b/packages/composer-playground/src/app/test/test.component.scss
@@ -31,6 +31,7 @@ app-test {
     .side-button {
       flex : 1;
       margin: 0 auto;
+      margin-left: $space-large;
 
       .button-item {
         padding-top: 5rem;
